--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8"/>
+        <!-- tell the application use real width device-->
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title> Indecision app </title>
     </head>
     <body>
