--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8"/>
-        <!-- tell the application use real width device-->
+        <!-- tell the application use real device width-->
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title> Indecision app </title>
+        <link rel="icon" type="image/png" href="/images/favicon.png">
     </head>
     <body>
         <div id="app"></div>
